                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 4.2.0

  *) [TS-2351] Bandaid fix for Range request crash related to
   Read-While-Writer and content length calculations.

  *) [TS-2408] Fix double free of proxy.config.admin.user_id.

  *) [TS-2396] UrlRewrite.cc does not free the queue correctly.
   Author: Yu Qing <zhuangyuan@taobao.com>

  *) [TS-2382] Partial fix for make install creating man files as root.

  *) [TS-2381] Reorganize TSUrlCreate docs into separate files.

  *) [TS-2377] Install man pages as part of the build.

  *) [TS-2379] Add a new field: '%<chp>', "client_host_port" to LogFormat.

  *) [TS-2374] Abort the producer if the none of it`s consumers is alive.

  *) [TS-2330] Update proxy.config.body_factory.enable_customizations comments in records.config

  *) [TS-2327] TSRedirectUrlSet does not perform DNS lookup of redirected OS

  *) [TS-1468] Check vary and accept headers on non-200 responses in cache

  *) [TS-2352] refine THREAD_ALLOC feature.

  *) [TS-2364] Introduce slice notation to field syntax in log format.

  *) [TS-2360] Fix usage of TSMimeHdrFieldValueStringGet() IDX in some plugins.

  *) [TS-2361] Load regex_remap configuration relative to the configuration directory.

  *) [TS-2359] Make install over existing installation can fail.

  *) [TS-2350] Enhancements to traffic_top

  *) [TS-2348] Rename tstop to traffic_top.

  *) [TS-2340] Fix TextLogObject log rolling.
   Author: bettydramit <b13621367396@gmail.com>

  *) [TS-2343] Remove the --schema option from Traffic Manager, and the code
   around it.

  *) [TS-2316] header_rewrite: numerous improvements: cookie based conditions,
   rule counters, improved documentation.
   Author: Alexey Ivanov <aivanov@linkedin.com>

  *) [TS-2338] Remove IPRange.cc and .h, and SocksParser.cc.

  *) [TS-2333] Change the SAX callbacks to not clash with libxml2, which broke
   synthetic metric completely.
